# vehicle-shadow

./: .gitmodules  Cargo.toml  README.md  build.rs  start.sh  start_body.sh  start_cabin.sh
cli/: Cargo.toml  README.md  build.rs
cli/src/: main.rs
data/: body.json  cabin.json  root.json
proto/vehicle-shadow/: signal.proto  types.proto
src/: config.rs  error.rs  main.rs  signal.rs  vehicle_shadow.rs  vss_json_loader.rs
src/rpc/: databroker_server.rs  mod.rs
vehicle-shadow-client/: .gitignore  Cargo.toml  README.md  build.rs
vehicle-shadow-client/src/: client.rs  error.rs  formatter.rs  lib.rs  parser.rs
