[package]
name = "vehicle-signal-shadow"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
clap = {version = "4.5.32", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sled = "0.34.7"
tokio = {version = "1.45.1", features = ["macros", "signal", "rt-multi-thread", "time"] }
