[package]
name = "vehicle-signal-shadow-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
prost = "0.12"
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
tokio-stream = "0.1"
futures = "0.3"
vehicle-shadow-client = { git = "ssh://git@github.com/AngryMane/vehicle-client.git" }

[build-dependencies]
tonic-build = "0.10" 
